Game, MoveListStrategy and MoveStrategy code have been adjusted.