@@ -3,6 +3,7 @@ package ch.zhaw.it.pm2.racetrack.strategy;
 import ch.zhaw.it.pm2.racetrack.UI.UserInterface;
 import ch.zhaw.it.pm2.racetrack.game.Direction;
 
+import java.util.Objects;
 import java.util.Optional;
 import java.util.List;
 import java.util.ArrayList;
@@ -16,11 +17,11 @@ import java.io.IOException;
  * Determines the next move based on a file containing a list of directions.
  */
 public class MoveListStrategy implements MoveStrategy {
-    List<String> moveList;
+    List<String> moveList = List.of("");
 
     /**
      * Instantiate the MoveListStrategy by reading the txt file containing all predefined moves.
-     * User can chose via userinterface UI which move file to use.
+     * User can choose via userinterface UI which move file to use.
      */
     public MoveListStrategy(UserInterface ui, File[] moveFiles){
         ArrayList<String> moveFileNames = new ArrayList<>();
@@ -45,9 +46,9 @@ public class MoveListStrategy implements MoveStrategy {
     @Override
     public Optional<Direction> nextMove() {
         // TODO: implementation
-        if (!moveList.isEmpty()){
-            Direction currDirection = Direction.valueOf(moveList.get(0).toUpperCase());
-            moveList.remove(0);
+        if (!Objects.equals(moveList.getFirst(), "")){
+            Direction currDirection = Direction.valueOf(moveList.getFirst().toUpperCase());
+            moveList.removeFirst();
             return Optional.of(currDirection);
         } else {
             return Optional.empty();
